--- a/Samples/JavaScript/index.html
+++ b/Samples/JavaScript/index.html
@@ -9,6 +9,17 @@
   <body>
     <h1>Orthanc DICOM Web Demo</h2>
 
+    <h2>STOW-RS - Upload DICOM file</h2>
+    <form id="stow">
+      <p>
+        DICOM file: 
+        <input id="stow-file" type="file" name="datafile">
+      </p>
+
+      <input type="submit"></input>
+    </form>
+    
+
     <h2>QIDO-RS - Search for series</h2>
     <form id="qido-series">
       <p>
