--- a/Samples/JavaScript/index.html
+++ b/Samples/JavaScript/index.html
@@ -50,6 +50,7 @@
     </ul>
 
     <script src="jquery-1.11.2.min.js" type="text/javascript"></script>
-    <script src="orthanc.js" type="text/javascript"></script>
+    <script src="qido-rs.js" type="text/javascript"></script>
+    <script src="stow-rs.js" type="text/javascript"></script>
   </body>
 </html>
