--- a/Resources/Samples/JavaScript/index.html
+++ b/Resources/Samples/JavaScript/index.html
@@ -49,7 +49,7 @@
     <ul id="qido-series-results">
     </ul>
 
-    <script src="jquery-1.11.2.min.js" type="text/javascript"></script>
+    <script src="jquery.min.js" type="text/javascript"></script>
     <script src="qido-rs.js" type="text/javascript"></script>
     <script src="stow-rs.js" type="text/javascript"></script>
   </body>
