--- a/WebApplication/index.html
+++ b/WebApplication/index.html
@@ -66,7 +66,7 @@
         </template>
         <div class="d-block">
           <p>
-            There was an error connecting to "{{lookup.server}}" server.
+            There was an error connecting to "{{ app.activeServer }}" server.
           </p>
         </div>
       </b-modal>
