--- a/WebApplication/index.html
+++ b/WebApplication/index.html
@@ -66,7 +66,7 @@
         </template>
         <div class="d-block">
           <p>
-            There was an error connecting to "{{ app.activeServer }}" server.
+            There was an error connecting to "{{ activeServer }}" server.
           </p>
         </div>
       </b-modal>
@@ -106,7 +106,7 @@
 
       <!-- STUDIES -->
 
-      <hr  v-show="showStudies" ref="studies-top" />
+      <hr v-show="showStudies" ref="studies-top" />
       <div class="row" v-show="showStudies">
         <h1>Studies</h1>
       </div>
@@ -120,11 +120,17 @@
         <b-table striped hover :current-page="currentPage" :per-page="perPage"
                  :items="studies" :fields="studiesFields" :fixed="false">
           <template slot="operations" slot-scope="data">
-            <b-button @click="OpenSeries(data.item)" title="Open series"><i class="fa fa-folder-open"></i></b-button>
-            <b-button @click="OpenStudyDetails(data.item)" title="Open tags"><i class="fa fa-address-card"></i></b-button>
-            <b-button title="Retrieve study using WADO-RS"><i class="fa fa-cloud-download"></i></b-button>
+            <b-button @click="OpenSeries(data.item)" title="Open series">
+              <i class="fa fa-folder-open"></i>
+            </b-button>
+            <b-button @click="OpenStudyDetails(data.item)" title="Open tags">
+              <i class="fa fa-address-card"></i>
+            </b-button>
+            <b-button @click="RetrieveStudy(data.item)" title="Retrieve study using WADO-RS">
+              <i class="fa fa-cloud-download"></i>
+            </b-button>
             <b-button @click="ConfirmDeleteStudy(data.item)"
-                      v-if="serversInfo[lookup.server].HasDelete" title="Delete remote study">
+                      v-if="serversInfo[activeServer].HasDelete" title="Delete remote study">
               <i class="fa fa-trash"></i>
             </b-button>
           </template>
@@ -167,11 +173,17 @@
         <b-table striped hover :current-page="currentPage" :per-page="perPage"
                  :items="series" :fields="seriesFields" :fixed="false">
           <template slot="operations" slot-scope="data">
-            <b-button @click="OpenSeriesPreview(data.item)" title="Preview"><i class="fa fa-eye"></i></b-button>
-            <b-button @click="OpenSeriesDetails(data.item)" title="Open tags"><i class="fa fa-address-card"></i></b-button>
-            <b-button title="Retrieve series using WADO-RS"><i class="fa fa-cloud-download"></i></b-button>
+            <b-button @click="OpenSeriesPreview(data.item)" title="Preview">
+              <i class="fa fa-eye"></i>
+            </b-button>
+            <b-button @click="OpenSeriesDetails(data.item)" title="Open tags">
+              <i class="fa fa-address-card"></i>
+            </b-button>
+            <b-button @click="RetrieveSeries(data.item)" title="Retrieve series using WADO-RS">
+              <i class="fa fa-cloud-download"></i>
+            </b-button>
             <b-button @click="ConfirmDeleteSeries(data.item)"
-                      v-if="serversInfo[lookup.server].HasDelete" title="Delete remote series">
+                      v-if="serversInfo[activeServer].HasDelete" title="Delete remote series">
               <i class="fa fa-trash"></i>
             </b-button>
           </template>
@@ -213,6 +225,31 @@
           </div>
         </b-modal>
       </div>
+
+
+      <b-modal ref="retrieve-job" size="xl" ok-only="true">
+        <template slot="modal-title">
+          Retrieving {{ jobLevel }}
+        </template>
+        <div class="d-block">
+          <p>
+            Orthanc is now running a background job to retrieve the
+            {{ jobLevel }} from remote server "{{ activeServer }}" using
+            WADO-RS.
+          </p>
+          <p>
+            Job ID: <tt>{{ jobId }}</tt>
+          </p>
+          <p>
+            Job details:
+          </p>
+          <pre>{{ jobDetails }}</pre>
+          <p>
+            <b-button variant="success" @click="RefreshJobDetails()">Refresh job details</b-button>
+          </p>
+        </div>
+      </b-modal>
+
 
       <p style="height:5em"></p>
     </div>
