--- a/WebApplication/index.html
+++ b/WebApplication/index.html
@@ -38,7 +38,7 @@
               you can search the content of remote DICOMweb servers
               (QIDO-RS), then locally retrieve the DICOM
               studies/series of interest
-              (WADO-RS). <a :href="orthancExplorerUri"
+              (WADO-RS). <a :href="orthancApiRoot"
               target="_blank">Orthanc Explorer</a> can be used to send
               DICOM resources to remote DICOMweb servers (STOW-RS).
             </p>
@@ -47,7 +47,7 @@
                  href="https://book.orthanc-server.com/plugins/dicomweb.html"
                  target="_blank" role="button">Open documentation</a>
               <a class="btn btn-primary btn-lg"
-                 :href="orthancExplorerUri"
+                 :href="orthancApiRoot"
                  target="_blank" role="button">Open Orthanc Explorer</a>
             </p>
           </div>
