migration to UCLouvain servers

--- a/WebApplication/index.html
+++ b/WebApplication/index.html
@@ -44,7 +44,7 @@
             </p>
             <p>
               <a class="btn btn-primary btn-lg"
-                 href="https://book.orthanc-server.com/plugins/dicomweb.html"
+                 href="https://orthanc.uclouvain.be/book/plugins/dicomweb.html"
                  target="_blank" role="button">Open documentation</a>
               <a class="btn btn-primary btn-lg"
                  :href="orthancApiRoot"
