cont removing dependency on bootstrap-vue

--- a/WebApplication/index.html
+++ b/WebApplication/index.html
@@ -139,19 +139,19 @@
             </tr>
           </thead>
           <tbody>
-            <tr v-for="study in studies">
-              <td v-for="column in studiesFields">{{column.key in study ? study[column.key].Value : ''}}</td>
+            <tr v-for="s in studies">
+              <td v-for="column in studiesFields">{{column.key in s ? s[column.key].Value : ''}}</td>
               <td>
-                <button type="button" class="btn btn-secondary" @click="OpenSeries(study)" title="Open series">
+                <button type="button" class="btn btn-secondary" @click="OpenSeries(s)" title="Open series">
                   <i class="fa fa-folder-open"></i>
                 </button>
-                <button type="button" class="btn btn-secondary" @click="OpenStudyDetails(study)" title="Open tags">
+                <button type="button" class="btn btn-secondary" @click="OpenStudyDetails(s)" title="Open tags">
                   <i class="fa fa-address-card"></i>
                 </button>
-                <button type="button" class="btn btn-secondary" @click="RetrieveStudy(study)" title="Retrieve study using WADO-RS">
+                <button type="button" class="btn btn-secondary" @click="RetrieveStudy(s)" title="Retrieve study using WADO-RS">
                   <i class="fa fa-cloud-download"></i>
                 </button>
-                <button type="button" class="btn btn-secondary" @click="ConfirmDeleteStudy(study)" title="Delete remote study"
+                <button type="button" class="btn btn-secondary" @click="ConfirmDeleteStudy(s)" title="Delete remote study"
                         v-if="serversInfo[activeServer].HasDelete == '1'">
                   <i class="fa fa-trash"></i>
                 </button>
@@ -193,23 +193,34 @@
         <h1>Series</h1>
       </div>
       <div class="row" v-show="showSeries">
-        <b-table striped hover :items="series" :fields="seriesFields" :fixed="false">
-          <template slot="operations" slot-scope="data">
-            <b-button @click="OpenSeriesPreview(data.item)" title="Preview">
-              <i class="fa fa-eye"></i>
-            </b-button>
-            <b-button @click="OpenSeriesDetails(data.item)" title="Open tags">
-              <i class="fa fa-address-card"></i>
-            </b-button>
-            <b-button @click="RetrieveSeries(data.item)" title="Retrieve series using WADO-RS">
-              <i class="fa fa-cloud-download"></i>
-            </b-button>
-            <b-button @click="ConfirmDeleteSeries(data.item)"
-                      v-if="serversInfo[activeServer].HasDelete" title="Delete remote series">
-              <i class="fa fa-trash"></i>
-            </b-button>
-          </template>
-        </b-table>
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th scope="col" v-for="column in seriesFields">{{column.label}}</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr v-for="s in series">
+              <td v-for="column in seriesFields">{{column.key in s ? s[column.key].Value : ''}}</td>
+              <td>
+                <button type="button" class="btn btn-secondary" @click="OpenSeriesPreview(s)" title="Preview">
+                  <i class="fa fa-eye"></i>
+                </button>
+                <button type="button" class="btn btn-secondary" @click="OpenSeriesDetails(s)" title="Open tags">
+                  <i class="fa fa-address-card"></i>
+                </button>
+                <button type="button" class="btn btn-secondary" @click="RetrieveSeries(s)" title="Retrieve series using WADO-RS">
+                  <i class="fa fa-cloud-download"></i>
+                </button>
+                <button type="button" class="btn btn-secondary" @click="ConfirmDeleteSeries(s)" title="Delete remote series"
+                        v-if="serversInfo[activeServer].HasDelete == '1'">
+                  <i class="fa fa-trash"></i>
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
 
         <b-modal ref="series-details" size="xl" ok-only="true">
           <template slot="modal-title">
@@ -278,7 +289,6 @@
 
     <!-- Add Vue and Bootstrap-Vue JS just before the closing </body> tag -->
     <script src="../libs/js/vue.min.js"></script>
-    <script src="../libs/js/bootstrap-vue.min.js"></script>
     <script src="../libs/js/axios.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
   </body>
