bundling jquery-3.7.1.min.js

--- a/WebApplication/index.html
+++ b/WebApplication/index.html
@@ -352,7 +352,7 @@
     </div>
 
     <!-- Add Vue and Bootstrap-Vue JS just before the closing </body> tag -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>  <!-- Necessary for Bootstrap -->
+    <script src="../libs/js/jquery-3.7.1.min.js"></script>  <!-- Necessary for Bootstrap -->
     <script src="../libs/js/bootstrap.min.js"></script>
     <script src="../libs/js/vue.min.js"></script>
     <script src="../libs/js/bootstrap-vue.min.js"></script>
