--- a/WebApplication/index.html
+++ b/WebApplication/index.html
@@ -173,20 +173,6 @@
             </tr>
           </tbody>
         </table>
-
-        <b-modal id="study-delete-confirm" size="xl" @ok="ExecuteDeleteStudy">
-          <template slot="modal-title">
-            Confirm deletion
-          </template>
-          <div class="d-block">
-            <p>
-              Are you sure you want to remove this study from the remote server?
-            </p>
-            <p>
-              Patient name: {{ studyToDelete && studyToDelete['00100010'] && studyToDelete['00100010'].Value }}
-            </p>
-          </div>
-        </b-modal>
       </div>
 
 
@@ -219,6 +205,32 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="modal" tabindex="-1" ref="study-delete-confirm">
+        <div class="modal-dialog modal-xl">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Confirm deletion</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>
+                Are you sure you want to remove this study from the remote server?
+              </p>
+              <p>
+                Patient name: {{ studyToDelete && studyToDelete['00100010'] && studyToDelete['00100010'].Value }}
+              </p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-primary" data-dismiss="modal" @click="ExecuteDeleteStudy">Confirm</button>
             </div>
           </div>
         </div>
@@ -272,20 +284,6 @@
             <b-img v-if="!previewFailure" :src="preview" fluid alt=""></b-img>
           </div>
         </b-modal>
-
-        <b-modal id="series-delete-confirm" size="xl" @ok="ExecuteDeleteSeries">
-          <template slot="modal-title">
-            Confirm deletion
-          </template>
-          <div class="d-block">
-            <p>
-              Are you sure you want to remove this series from the remote server?
-            </p>
-            <p>
-              Series description: {{ seriesToDelete && seriesToDelete['0008103E'] && seriesToDelete['0008103E'].Value }}
-            </p>
-          </div>
-        </b-modal>
       </div>
 
 
@@ -318,6 +316,32 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="modal" tabindex="-1" ref="series-delete-confirm">
+        <div class="modal-dialog modal-xl">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Confirm deletion</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>
+                Are you sure you want to remove this series from the remote server?
+              </p>
+              <p>
+                Series description: {{ seriesToDelete && seriesToDelete['0008103E'] && seriesToDelete['0008103E'].Value }}
+              </p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-primary" data-dismiss="modal" @click="ExecuteDeleteSeries">Confirm</button>
             </div>
           </div>
         </div>
