removed dependency on bootstrap-vue

--- a/WebApplication/index.html
+++ b/WebApplication/index.html
@@ -189,14 +189,14 @@
                   <tr>
                     <th scope="col" class="col-sm-2">Tag</th>
                     <th scope="col" class="col-sm-3">Description</th>
-                    <th scope="col">Value</th>
+                    <th scope="col" class="col-sm-7">Value</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr v-for="s in studyTags">
-                    <td>{{'Tag' in s ? s.Tag : ''}}</td>
-                    <td>{{'Name' in s ? s.Name : ''}}</td>
-                    <td>{{'Value' in s ? s.Value : ''}}</td>
+                    <td class="col-sm-2">{{'Tag' in s ? s.Tag : ''}}</td>
+                    <td class="col-sm-3">{{'Name' in s ? s.Name : ''}}</td>
+                    <td class="col-sm-7">{{'Value' in s ? s.Value : ''}}</td>
                   </tr>
                 </tbody>
               </table>
@@ -313,14 +313,14 @@
                   <tr>
                     <th scope="col" class="col-sm-2">Tag</th>
                     <th scope="col" class="col-sm-3">Description</th>
-                    <th scope="col">Value</th>
+                    <th scope="col" class="col-sm-7">Value</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr v-for="s in seriesTags">
-                    <td>{{'Tag' in s ? s.Tag : ''}}</td>
-                    <td>{{'Name' in s ? s.Name : ''}}</td>
-                    <td>{{'Value' in s ? s.Value : ''}}</td>
+                    <td class="col-sm-2">{{'Tag' in s ? s.Tag : ''}}</td>
+                    <td class="col-sm-3">{{'Name' in s ? s.Name : ''}}</td>
+                    <td class="col-sm-7">{{'Value' in s ? s.Value : ''}}</td>
                   </tr>
                 </tbody>
               </table>
